--- a/7_classes_objects.ipynb
+++ b/7_classes_objects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPifzmyISQH7XUS2gIClyXF",
+      "authorship_tag": "ABX9TyNeVqXq6MwuEvIauDzHmpR+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,8 +32,9 @@
         "# Classes & Objects\n",
         "\n",
         "### Reading\n",
-        "- https://www.tutorialspoint.com/python/python_classes_objects.htm\n",
-        "- https://allendowney.github.io/ThinkPython/chap16.html (also Ch. 14, 15)"
+        "- https://www.tutorialspoint.com/python/python_classes_objects.htm (thru Inheritance)\n",
+        "- https://allendowney.github.io/ThinkPython/chap16.html (also Ch. 14, 15)\n",
+        "- https://www.tutorialspoint.com/python/python_modules.htm"
       ],
       "metadata": {
         "id": "GqIjp3pTrfUg"
