--- a/8_graphics_programming.ipynb
+++ b/8_graphics_programming.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkZlVkWL6p+dVdAz5CLn81",
+      "authorship_tag": "ABX9TyMixrLIZKyUz/WL6YhlCIav",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,48 +53,47 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "!apt-get install -y xvfb\n",
-        "!pip install pyvirtualdisplay\n",
-        "import pyvirtualdisplay\n",
+        "### Graphics Programming\n",
         "\n",
-        "import os\n",
-        "os.system(\"Xvfb :1 -screen 0 1024x768x24 &\")\n",
-        "os.environ['DISPLAY'] = ':1'\n",
+        "Graphical user interfaces (GUI) are a key area of computer programming. While Python is not the most common language for GUI programming, it is used in some cases and we can use Python for basic `drawing` functionality.\n",
         "\n",
-        "# !Xvfb :1 -screen 0 1024x768x24 &\n",
-        "# import os\n",
-        "# os.environ['DISPLAY'] = ':1'"
+        "A GUI is made up of basic geometric elements (objects) drawn on the computer display for user interaction.\n",
+        "\n",
+        "Unfortunately, it's not feasible to run GUI programs in a web browser, so the examples here need to be run on a personal computer."
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WtGCxDw1U88k",
-        "outputId": "71659bf6-a16f-442d-eddb-574c74b4074d"
-      },
-      "execution_count": 50,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Reading package lists... Done\n",
-            "Building dependency tree... Done\n",
-            "Reading state information... Done\n",
-            "xvfb is already the newest version (2:21.1.4-2ubuntu1.7~22.04.11).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 49 not upgraded.\n",
-            "Requirement already satisfied: pyvirtualdisplay in /usr/local/lib/python3.10/dist-packages (3.0)\n"
-          ]
-        }
-      ]
+        "id": "y9BZOY0XaeEc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Python GUI\n",
+        "\n",
+        "The [tkinter library](https://docs.python.org/2/library/tkinter.html) enables Python to interact with a computer's graphical user interface (GUI) and draw visual elements.\n",
+        "\n",
+        "Examples here assume you have downloaded this [custom Python library](http://mcsp.wartburg.edu/zelle/python/ppics2/code/graphics.py) - which depends on tkinter and simplifies its drawing commands."
+      ],
+      "metadata": {
+        "id": "ZxMl5W1UbVGg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Drawing takes place withing a graphics `window`"
+      ],
+      "metadata": {
+        "id": "oJE2V3afcwe2"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "d = pyvirtualdisplay.Display(visible=0, size=(1400, 900))\n",
-        "d.start()"
+        "from graphics import *\n",
+        "win = GraphWin(\"Window Title\",600,600)"
       ],
       "metadata": {
         "colab": {
@@ -103,7 +102,7 @@
         "id": "nDdd09XvZD2M",
         "outputId": "819faa8d-1da6-473c-f682-4914b9c50529"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -118,30 +117,199 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "from urllib.request import urlretrieve\n",
-        "urlretrieve(\"https://mcsp.wartburg.edu/zelle/python/ppics2/code/graphics.py\", \"graphics.py\")\n",
-        "from graphics import *"
+        "Graphics windows have a defined size (in pixels). Default is 200 x 200\n",
+        "- All points in the window have horizonal (x) and vertical (y) coordinatesic\n",
+        "- Coordinate system begins with the upper left corner (0,0)\n",
+        "- X values increase from left to right, Y values increase from top to bottom\n",
+        "- You can set custom title and window size like so:"
       ],
       "metadata": {
-        "id": "0gq0XezFS8T-"
-      },
-      "execution_count": 47,
-      "outputs": []
+        "id": "EL6t4c4fc7VR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`tkinter` provides classes for basic graphic objects that serve as building blocks for a more complex GUI.\n",
+        "\n",
+        "Each class has a constructor methods to create instances of that class.\n",
+        "\n",
+        "Once defined, a graphic object is drawn to the graphics window with the draw() method."
+      ],
+      "metadata": {
+        "id": "O6yVpZAadKFx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Point\n",
+        "Points are the simplest graphical objects and are defined by their x & y coordinates:"
+      ],
+      "metadata": {
+        "id": "AqoggxJPddKP"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "sTi4q8LIMATX"
       },
       "outputs": [],
       "source": [
-        "win = GraphWin(\"Window Title\",600,600)\n",
         "p = Point(50, 60)\n",
         "p.draw(win)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Line"
+      ],
+      "metadata": {
+        "id": "xpXksoC5diyz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l = Line(<point1>, <point2>)\n",
+        "l = Line(Point(10,10), Point(50,50))\n",
+        "l.draw(win)"
+      ],
+      "metadata": {
+        "id": "uNlrnZlkdlgW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Circle"
+      ],
+      "metadata": {
+        "id": "ru-7evk8dpDn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = Circle(<center_point>, <radius>)\n",
+        "c = Circle(p, 30)"
+      ],
+      "metadata": {
+        "id": "7N8ZID50dsmI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Oval"
+      ],
+      "metadata": {
+        "id": "a9-Y5Is4dteK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "o = Oval(<point1>, <point2>)\n",
+        "o = Oval(Point(10,10), Point(50,50))"
+      ],
+      "metadata": {
+        "id": "ch5HqNUMdweU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Rectangle"
+      ],
+      "metadata": {
+        "id": "aIdxDDUBdy8i"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "r = Rectangle(<point_upper_left>, <point_lower_right>)\n",
+        "r =  Rectangle(Point(10,10), Point(100,100))"
+      ],
+      "metadata": {
+        "id": "niuMTOq0d1K2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Polygon\n",
+        "Takes any number of points and connects them into a `closed` shape."
+      ],
+      "metadata": {
+        "id": "gwBLk3SYd3vd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t = Polygon(<point1>,<point2>,<point3>)"
+      ],
+      "metadata": {
+        "id": "xCd1vYWWd_QS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Text Entry\n",
+        "Creates a text-entry object for user interaction"
+      ],
+      "metadata": {
+        "id": "YRePnyGJeB5O"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "e = Entry(<point>,<num_chars>)"
+      ],
+      "metadata": {
+        "id": "B2U3dx8zeIxI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Text"
+      ],
+      "metadata": {
+        "id": "2ImSnJkseKs6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "label = Text(<center_point>, “text”)"
+      ],
+      "metadata": {
+        "id": "K6bYTGU4eNhe"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
