--- a/8_graphics_programming.ipynb
+++ b/8_graphics_programming.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMixrLIZKyUz/WL6YhlCIav",
+      "authorship_tag": "ABX9TyOCTL9nDA9dqlDNaZ7kdXDs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,6 +41,7 @@
         "### Reading\n",
         "\n",
         "- https://www.tutorialspoint.com/python/python_gui_programming.htm\n",
+        "- https://mcsp.wartburg.edu/zelle/python/graphics/graphics.pdf\n",
         "\n",
         "### Learning Outcomes\n",
         "- Python graphics setup\n",
@@ -57,7 +58,7 @@
       "source": [
         "### Graphics Programming\n",
         "\n",
-        "Graphical user interfaces (GUI) are a key area of computer programming. While Python is not the most common language for GUI programming, it is used in some cases and we can use Python for basic `drawing` functionality.\n",
+        "Graphical user interfaces (GUI) are a key area of computer programming. While Python is not the most common language for GUI programming, we can use Python for basic `drawing` functionality.\n",
         "\n",
         "A GUI is made up of basic geometric elements (objects) drawn on the computer display for user interaction.\n",
         "\n",
@@ -74,7 +75,7 @@
         "\n",
         "The [tkinter library](https://docs.python.org/2/library/tkinter.html) enables Python to interact with a computer's graphical user interface (GUI) and draw visual elements.\n",
         "\n",
-        "Examples here assume you have downloaded this [custom Python library](http://mcsp.wartburg.edu/zelle/python/ppics2/code/graphics.py) - which depends on tkinter and simplifies its drawing commands."
+        "This [custom Python library](http://mcsp.wartburg.edu/zelle/python/ppics2/code/graphics.py) - abstracts tkinter and simplifies its drawing commands. The examples here assume use of this library."
       ],
       "metadata": {
         "id": "ZxMl5W1UbVGg"
@@ -83,10 +84,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Drawing takes place withing a graphics `window`"
+        "Drawing takes place withing a graphics `window`.\n",
+        "\n",
+        "Windows have a defined size (in pixels). Default is 200 x 200 but can be set manually.\n",
+        "- All points in the window have horizonal (x) and vertical (y) coordinates\n",
+        "- Coordinate system begins with the upper left corner (0,0)\n",
+        "- X values increase from left to right, Y values increase from top to bottom\n"
       ],
       "metadata": {
-        "id": "oJE2V3afcwe2"
+        "id": "EL6t4c4fc7VR"
       }
     },
     {
@@ -119,24 +125,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Graphics windows have a defined size (in pixels). Default is 200 x 200\n",
-        "- All points in the window have horizonal (x) and vertical (y) coordinatesic\n",
-        "- Coordinate system begins with the upper left corner (0,0)\n",
-        "- X values increase from left to right, Y values increase from top to bottom\n",
-        "- You can set custom title and window size like so:"
-      ],
-      "metadata": {
-        "id": "EL6t4c4fc7VR"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "`tkinter` provides classes for basic graphic objects that serve as building blocks for a more complex GUI.\n",
         "\n",
         "Each class has a constructor methods to create instances of that class.\n",
         "\n",
-        "Once defined, a graphic object is drawn to the graphics window with the draw() method."
+        "Once defined, a graphic object is drawn to the graphics window with the `draw()` method."
       ],
       "metadata": {
         "id": "O6yVpZAadKFx"
@@ -146,7 +139,7 @@
       "cell_type": "markdown",
       "source": [
         "### Point\n",
-        "Points are the simplest graphical objects and are defined by their x & y coordinates:"
+        "Points are the simplest graphical objects and are defined by x & y coordinates:"
       ],
       "metadata": {
         "id": "AqoggxJPddKP"
@@ -307,6 +300,36 @@
       ],
       "metadata": {
         "id": "K6bYTGU4eNhe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Animation\n",
+        "\n",
+        "\n",
+        "Objects can also be hidden with the `undraw()` method or moved to a new position with the `move()` method:"
+      ],
+      "metadata": {
+        "id": "jwih2I0z3Dvy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import time\n",
+        "\n",
+        "sun = Circle(Point(50,100), 30)\n",
+        "sun.draw()\n",
+        "counter = 0\n",
+        "while counter < 10:\n",
+        "  time.sleep(1) # add one second delay\n",
+        "  sun.move(5,-3) # move 5px right and 3px up"
+      ],
+      "metadata": {
+        "id": "mlLieJ303R-a"
       },
       "execution_count": null,
       "outputs": []
