--- a/8_graphics_programming.ipynb
+++ b/8_graphics_programming.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCTL9nDA9dqlDNaZ7kdXDs",
+      "authorship_tag": "ABX9TyMejiJ2vYn+0KNavIcqreXH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +42,7 @@
         "\n",
         "- https://www.tutorialspoint.com/python/python_gui_programming.htm\n",
         "- https://mcsp.wartburg.edu/zelle/python/graphics/graphics.pdf\n",
+        "- https://www.geeksforgeeks.org/python-tkinter-tutorial/\n",
         "\n",
         "### Learning Outcomes\n",
         "- Python graphics setup\n",
@@ -62,7 +63,9 @@
         "\n",
         "A GUI is made up of basic geometric elements (objects) drawn on the computer display for user interaction.\n",
         "\n",
-        "Unfortunately, it's not feasible to run GUI programs in a web browser, so the examples here need to be run on a personal computer."
+        "Unfortunately, it's not feasible to run GUI programs in a web browser, so the examples here need to be run on a personal computer.\n",
+        "\n",
+        "Also NOTE - the drawing library may require at least Python version 3.10 or later on Mac OS computers."
       ],
       "metadata": {
         "id": "y9BZOY0XaeEc"
@@ -99,7 +102,15 @@
       "cell_type": "code",
       "source": [
         "from graphics import *\n",
-        "win = GraphWin(\"Window Title\",600,600)"
+        "\n",
+        "def main():\n",
+        "    win = GraphWin(\"Window Title\",600,600)\n",
+        "\n",
+        "    # drawing commands here\n",
+        "\n",
+        "    win.getMouse() # pause for click in window\n",
+        "    win.close()\n",
+        "main()"
       ],
       "metadata": {
         "colab": {
@@ -321,12 +332,23 @@
       "source": [
         "import time\n",
         "\n",
-        "sun = Circle(Point(50,100), 30)\n",
-        "sun.draw()\n",
-        "counter = 0\n",
-        "while counter < 10:\n",
-        "  time.sleep(1) # add one second delay\n",
-        "  sun.move(5,-3) # move 5px right and 3px up"
+        "def main():\n",
+        "    win = GraphWin(\"Window Title\",600,600)\n",
+        "\n",
+        "    # drawing commands here\n",
+        "    sun = Circle(Point(50,100), 30)\n",
+        "    sun.setFill('yellow')\n",
+        "    sun.draw(win)\n",
+        "\n",
+        "    counter = 0\n",
+        "    while counter < 10:\n",
+        "      time.sleep(0.5) # add half-second delay\n",
+        "      sun.move(5,-3) # move 5px right and 3px up\n",
+        "\n",
+        "    win.getMouse() # pause for click in window\n",
+        "    win.close()\n",
+        "main()\n",
+        "\n"
       ],
       "metadata": {
         "id": "mlLieJ303R-a"
