add statistics notes

--- a/9_data_analysis.ipynb
+++ b/9_data_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/F+3zHlYPSPsOeON8jaUe",
+      "authorship_tag": "ABX9TyPARbiGrqL+rBTRPEEMy8ac",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,6 +41,7 @@
         "### Reading\n",
         "\n",
         "- https://realpython.com/python-statistics/\n",
+        "- https://docs.python.org/3/library/statistics.html\n",
         "- https://matplotlib.org/stable/tutorials/pyplot.html\n",
         "- https://www.tutorialspoint.com/matplotlib/index.htm\n",
         "- https://www.datacamp.com/community/tutorials/matplotlib-tutorial-python"
@@ -63,6 +64,71 @@
       "metadata": {
         "id": "0sKIsnjVeL8m"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Python Data Analysis\n",
+        "\n",
+        "Python is widely used to analyze data for business and science purposes. This typically includes describing, summarizing, and representing data visually to identify trends and patterns.\n",
+        "\n",
+        "Python's popularity stems from robust features to acquire & manage data, as well as a built-in `statistics` module and numerous third-party libraries.\n"
+      ],
+      "metadata": {
+        "id": "ZjsWQGROFzAf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Descriptive Statistcs\n",
+        "\n",
+        "Python’s built-in `statistics` library supports basic descriptive statistics and is good in situations where one's datasets are not too large or you don't wnat to rely on third-party libraries.\n",
+        "\n",
+        "The module is not intended as a competitor to full-featured libraries such as NumPy, SciPy, but is sufficient for common descriptive statistics."
+      ],
+      "metadata": {
+        "id": "MrzPbm8HHUe4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from statistics import mean, median, mode, stdev, variance, quantiles\n",
+        "data = [1, 2, 3, 4, 4, 6]\n",
+        "print(f\"mean {mean(data):.2f}\")      # compute average value of data array\n",
+        "print(\"median\", median(data))  # return middle value of the data array\n",
+        "print(\"mode\", mode(data))      # return most common data point in the data array\n",
+        "\n",
+        "# compute measures of data variability\n",
+        "print(f\"std deviation {stdev(data):.2f}\")\n",
+        "print(f\"variance {variance(data):.2f}\")\n",
+        "\n",
+        "# Divide data into n continuous intervals with equal probability. n=4 by default\n",
+        "print(\"quantiles\", quantiles(data))"
+      ],
+      "metadata": {
+        "id": "OZ_3I2OGJBXp",
+        "outputId": "fefa8c7e-0111-40ef-c005-9ec0d69ba75c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mean 3.33\n",
+            "median 3.5\n",
+            "mode 4\n",
+            "std deviation 1.75\n",
+            "variance 3.07\n",
+            "quantiles [1.75, 3.5, 4.5]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -109,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -174,7 +240,7 @@
         "id": "xhwZEhGGgXPa",
         "outputId": "a5df3b94-2c43-420c-c32d-24ec3ac375dc"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -214,7 +280,7 @@
         "id": "2gtPX7J3gdIR",
         "outputId": "a73f06c9-1b3f-4055-ee2c-b2ca1fb0b23d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -269,7 +335,7 @@
         "id": "3q_EG08njmyD",
         "outputId": "f537ffef-c504-4f6c-98df-e60976f819f7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -308,7 +374,7 @@
         "id": "oDP-deN1gihS",
         "outputId": "02f151f9-f985-4917-ee5d-50af0b6d9b26"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -346,7 +412,7 @@
         "id": "Azc1FsFxkCTw",
         "outputId": "e88f9682-c853-41ce-9212-a117f6316dc0"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -372,7 +438,7 @@
         "id": "H_elbAtykFn7",
         "outputId": "270b0b63-ebec-48c7-95d7-f661141d20c8"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
