--- a/10_data_retrieval.ipynb
+++ b/10_data_retrieval.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtDMp/iWv+pXPe8NiKTFJJ",
+      "authorship_tag": "ABX9TyNNzL8LK+T3Z0p1j0mz9smz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "### Reading\n",
         "\n",
         "- https://requests.readthedocs.io/en/latest/user/quickstart/\n",
-        "- https://www.w3schools.com/tags/ref_httpmethods.asp\n",
+        "- https://www.tutorialspoint.com/http/index.htm\n",
         "- https://www.w3schools.com/python/python_json.asp"
       ],
       "metadata": {
@@ -126,7 +126,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### HTTP Response"
+        "#### HTTP Response\n",
+        "\n",
+        "After receiving an HTTP request, a server should return a well-defined response.\n",
+        "\n",
+        "The response typically includes:\n",
+        "- **status code** - a standard 3-digit integer that informs the receiver on success or failure of the request\n",
+        "- **headers** -  additional information about the response (e.g. content size, type, & last modified)\n",
+        "- **body** - Can be any data returned from the server"
       ],
       "metadata": {
         "id": "LIFZeer4BfU2"
