added content types

--- a/10_data_retrieval.ipynb
+++ b/10_data_retrieval.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNzL8LK+T3Z0p1j0mz9smz",
+      "authorship_tag": "ABX9TyP0MU7BIGOwwkvdgp50w79N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,12 +52,26 @@
       "cell_type": "markdown",
       "source": [
         "### Learning Outcomes\n",
+        "- What is data retrieval?\n",
         "- Basics of HTTP requests\n",
         "- Making HTTP requests with Python\n",
         "- Querying databases with Python"
       ],
       "metadata": {
         "id": "pob8DHhu3KZX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### What is Data Retrieval?\n",
+        "\n",
+        "Programming often involves retrieving data from a source outside of your program. Commonly, sources are a file, a database, or an `API` (internet service).\n",
+        "\n",
+        "We previously covered loading data from a file. This doc covers how to fetch data from an internet service or a database with Python."
+      ],
+      "metadata": {
+        "id": "XgjUbpJ2DDgZ"
       }
     },
     {
@@ -137,6 +151,56 @@
       ],
       "metadata": {
         "id": "LIFZeer4BfU2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Content Types\n",
+        "\n",
+        "HTTP servers return data in a defined format that clients should be able to understand.\n",
+        "\n",
+        "Some common formats for sharing data between applications are:\n",
+        "\n",
+        "- CSV - Comma-separated values\n",
+        "\n",
+        "```\n",
+        "name, major, gpa\n",
+        "jim,art,3.8\n",
+        "sue,science,3.75\n",
+        "\n",
+        "```\n",
+        "\n",
+        "- JSON - JavaScript Object Notation\n",
+        "\n",
+        "```\n",
+        "[\n",
+        "  {\"name\":\"jim\", \"major\":\"art\", \"gpa\": 3.8},\n",
+        "  {\"name\":\"sue\", \"major\":\"science\", \"gpa\": 3.75},\n",
+        "]\n",
+        "\n",
+        "```\n",
+        "\n",
+        "- XML - Extensible Markup Language\n",
+        "\n",
+        "```\n",
+        "<?xml version=\"1.0\" encoding=\"UTF-8\" ?>\n",
+        "<root>\n",
+        "  <row>\n",
+        "    <name>jim</name>\n",
+        "    <major>art</major>\n",
+        "    <gpa>3.8</gpa>\n",
+        "  </row>\n",
+        "  <row>\n",
+        "    <name>sue</name>\n",
+        "    <major>science</major>\n",
+        "    <gpa>3.75</gpa>\n",
+        "  </row>\n",
+        "</root>\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "vzn-80amDzmA"
       }
     },
     {
