Add POST examples

--- a/10_data_retrieval.ipynb
+++ b/10_data_retrieval.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpxjIlnDUXkRO/E2TxLFOn",
+      "authorship_tag": "ABX9TyNNU9coEGuE/j81gKHdCGmZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -208,19 +208,36 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### HTTP Requests with Python\n",
+        "### HTTP Requests in Python\n",
         "\n",
         "The Python ecosystem has a number of libraries that simplify making an HTTP request. `requests` is the most mature of those.\n",
         "\n",
         "Basic syntax involves defining a `request` object with URL and method. Subsequent commands can retrieve attributes of request, such as `text`, `status code`, etc.\n",
         "\n",
-        "The `requests` library provides access to response content in several formats:\n",
+        "The `requests` library performs the HTTP request and exposes the `response` for subsequent commands.\n",
         "\n",
-        "- text - plain text of the response\n",
-        "- json() - JSON format (if the response supports this"
+        "The response includes `content` as well as supporting information (e.g. status_code, headers, etc.)"
       ],
       "metadata": {
         "id": "rdbtw17T6_Mh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### GET Requests\n",
+        "\n",
+        "A GET request retrieves data from a server based on the `contract` for what urls and query parameters the server supports.\n",
+        "\n",
+        "These requests and the necessary commands are relatively simple.\n",
+        "\n",
+        "Response content can be accessed in several formats:\n",
+        "\n",
+        "- text - plain text of the response\n",
+        "- json() - JSON format (if the content supports this)"
+      ],
+      "metadata": {
+        "id": "AkM7fEg54Tzu"
       }
     },
     {
@@ -251,6 +268,46 @@
         "print(\"headers\", r.headers)\n",
         "print(r.json())"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### POST Requests\n",
+        "\n",
+        "As noted above, POST requests are common for sending information to a server (e.g. form submissions, file uploads, etc.)\n",
+        "\n",
+        "POST `content_type` needs to match what the server expects. Common content_types are `form-encoded` or JSON."
+      ],
+      "metadata": {
+        "id": "vsJ-pR_z4WDX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "payload = {'key1': 'value1', 'key2': 'value2'}\n",
+        "# automatically encode Python dictionary as form data\n",
+        "r = requests.post('https://httpbin.org/post', data=payload)"
+      ],
+      "metadata": {
+        "id": "filCUgUu6zfb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "payload = {'key1': 'value1', 'key2': 'value2'}\n",
+        "# automatically convert the Python dictionary to a string\n",
+        "# and send 'Content-Type: application/json' header\n",
+        "r = requests.post('https://api.github.com/some/endpoint', json=payload)"
+      ],
+      "metadata": {
+        "id": "g_ozdSzf65Zj"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
